Cleaned up issues with getConfigurationSections